tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__ItsStorageTime-AAAAAAAAAAAAAAAAAAAAsg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 178,
  "optional_prerequisites": [
    176,
    693
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "To make an AE system, you'll need all 4 patterns, collect them all! If you hit EV without getting all of them, you can also make them yourself.\n\n[note]BTW, you need a ton of Titanium to do AE2, so if you can't make it, you won't get much of anywhere.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "It's Storage Time!",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
