tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__KeepingYourNetwo-AAAAAAAAAAAAAAAAAAAFCw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1291,
  "prerequisites": [
    1296
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Helps with fluctuating power. Energy cells store up to 2,000,000 AE. They do not accept power directly but are used to buffer some power in an already existing ME network. Energy Cells do not use a channel.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Keeping Your Network Happy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1296
  ],
  "rewards": [],
  "tasks": []
}
