tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__LevelMaintainer-dmUrFrCfSESWj1ybHqTGNg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12726970529381402166,
  "prerequisites": [
    1301,
    2477
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The ME Level Maintainer is another cool addition of AE2FC. Choose an item or fluid and an amount to maintain, and the Level Maintainer will attempt to call patterns to keep crafting the item until it reaches the threshold you configured. You can also configure the crafting batch size.\n\n[note]For fluid crafts, put in a fluid drop and don't drag from NEI.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Level Maintainer",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1301,
    2477
  ],
  "rewards": [],
  "tasks": []
}
