tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__MEinYourCleanroo-AAAAAAAAAAAAAAAAAAAFMQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1329,
  "prerequisites": [
    1296,
    183,
    2519
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Wireless Connectors are a close range Quantum Network Bridge alternative.\n\nConnections are point-to-point - you can't connect more than 2 blocks together. Each block will use 10 + distance * ln(distance^2 + 3) AE/t. Does not work across dimensions. Power needs to be provided on only one side. Up to 32 channels can be transferred through the connection. Can connect directly to dense cables. The Wireless Connector itself does not use any channels.\n\n[note]Also, these are more TPS friendly than large chains of dense cables![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "ME in Your Cleanroom",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1296,
    183,
    2519
  ],
  "rewards": [],
  "tasks": []
}
