tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__MagicalMinions-AAAAAAAAAAAAAAAAAAAJ9Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2549,
  "prerequisites": [
    2512
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can use the Wireless Golem Backpack to connect your golem to the network if it's close enough to an access point. See the Thaumonomicon for details.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Magical Minions",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2512
  ],
  "rewards": [],
  "tasks": []
}
