tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__MakingPatternsQu-AAAAAAAAAAAAAAAAAAAJ2Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2521,
  "prerequisites": [
    1328
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Pattern Encoder will allow you to use NEI's shift-click ? button functionality to create a crafting pattern even if you don't have the appropriate items.\n\nHowever, you can also drag the items from NEI to do the same thing, though much slower, because you have to look up each component. This is vastly less useful for processing patterns, since it's always 64 items though.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Making Patterns Quick",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1328
  ],
  "rewards": [],
  "tasks": []
}
