tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__MiscellaneousAEI-AAAAAAAAAAAAAAAAAAAJ9A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2548,
  "prerequisites": [
    860
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are several AE items that aren't particularly useful, but probably deserve mention, so here they are:\n\n§lCertus Tanks§r: They hold 32B and are portable and easy to make.\n\n§lView Cell§r: Format in a Cell Workbench to filter what you see in a terminal (when they're installed in it)\n\n§lCertus/Nether Quartz Cutting Knive§rs: Right-click to open interface and choose a name. The press can be used in the Inscriber to name stuff without using an anvil. You can also rename p2p tunnels and interfaces in world with the knife.\n\n§lME Block Container§r: Holds only one type of item, but the amount of a 64k drive. Can place the item in world, or replace in a 1x1 or 3x3 area. Blocks replaced will be dumped in world. This will be horizontal or vertical depending on which side of a block you select. Shift-right-click air to change mode, right-click a block to activate mode.\n\n§lCharged Quartz Fixture§r: Emits light at the same level as a torch, but fancier.\n\n§lLight Detecting Fixture§r: Emits redstone signal based on light. Since it only starts at 7, it's not as useful as the Light Sensor.\n\n§lME Upgrade (Tier 1/2/3)§r: If you're an OC person, there are 3 upgrades you can make to add access to your network from robots and drones.\nT1: 0.5 access point range\nT2: Normal access point range\nT3: Unlimited range, any dim\n\n§lEntropy Manipulator§r: Changes grass/dirt/dried dirt into each other, or starts fires. Or melts ice. Useless.\n\n§lMatter Cannon§r: Shoots Matter Balls made in the Matter Condenser. Put it in an ME Chest or Drive and put items in a Terminal to fill. Decent I guess? But it destroys blocks every time you use it, so... Well, I guess you could use it with Paint Balls?\n\n§lColor Applicator§r: Use dye items or Paint Balls (more efficient) to dye stuff. You can dye cables, or anything Forge-compatible, like wool or glass. Place items inside like the Matter Cannon. You can cycle through the colors by holding shift and right-clicking, or scrolling the mouse wheel. If you use snow balls, you can remove paint instead. You can also use it in a dispenser.\n\n§6§lWalrus§r: It's a walrus, what were you expecting?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Miscellaneous AE Items",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    860
  ],
  "rewards": [],
  "tasks": []
}
