tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__NeedMoreInformat-5ObFHI5BQ5Oxv0yca7morA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10250548527318542508,
  "prerequisites": [
    1256,
    2537
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A brand-new tool for you, amigo.\n\nThis little buddy not only has a larger card slot than the normal one, but also can show more information about your network storage.\n\nClicking the component icon can switch between ITEM, FLUID, and ESSENTIA details.\n\n[warn]NOTE:\n|  unit  |      range   |\n|    B   |    0~2^10   |\n|   KB   | 2^10~2^20 |\n|   MB   | 2^20~2^30 |\n|   GB   | 2^30~2^40 |\n|   TB   | 2^40~2^50 |\n|   PB   | 2^50~2^60 |\n|   EB   | 2^60~2^70 |\n|   ZB   | 2^70~2^80 |\n|   YB   | 2^80~2^90 |\n|   BB   | over 2^90  |[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Need More Information?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1256,
    2537
  ],
  "rewards": [],
  "tasks": []
}
